--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -121,14 +121,20 @@
     <Compile Include="Database\Sensor.cs" />
     <Compile Include="Database\SessionFactoryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SensorCommunication\AddMeasurement.cs" />
+    <Compile Include="SensorCommunication\AddMeasurementHandler.cs" />
+    <Compile Include="SensorCommunication\DataHandler.cs" />
     <Compile Include="SensorCommunication\Dto\DataType.cs" />
     <Compile Include="SensorCommunication\Dto\Measurement.cs" />
     <Compile Include="SensorCommunication\Dto\MeasurementValue.cs" />
     <Compile Include="SensorCommunication\Dto\Metadata.cs" />
     <Compile Include="SensorCommunication\Dto\SensorDefinition.cs" />
     <Compile Include="SensorCommunication\IJsonDeserializer.cs" />
+    <Compile Include="SensorCommunication\IMessageHandler.cs" />
     <Compile Include="SensorCommunication\JsonDeserializer.cs" />
     <Compile Include="SensorCommunication\MetadataHandler.cs" />
+    <Compile Include="SensorCommunication\UdateSensorHandler.cs" />
+    <Compile Include="SensorCommunication\UpdateSensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
