--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -121,20 +121,22 @@
     <Compile Include="Database\Sensor.cs" />
     <Compile Include="Database\SessionFactoryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SensorCommunication\AddMeasurement.cs" />
-    <Compile Include="SensorCommunication\AddMeasurementHandler.cs" />
-    <Compile Include="SensorCommunication\DataHandler.cs" />
-    <Compile Include="SensorCommunication\Dto\DataType.cs" />
-    <Compile Include="SensorCommunication\Dto\Measurement.cs" />
-    <Compile Include="SensorCommunication\Dto\MeasurementValue.cs" />
-    <Compile Include="SensorCommunication\Dto\Metadata.cs" />
-    <Compile Include="SensorCommunication\Dto\SensorDefinition.cs" />
+    <Compile Include="SensorCommunication\AddValues\AddMeasurement.cs" />
+    <Compile Include="SensorCommunication\AddValues\AddMeasurementHandler.cs" />
+    <Compile Include="SensorCommunication\CompositeMessageHandler.cs" />
+    <Compile Include="SensorCommunication\AddValues\DataHandler.cs" />
+    <Compile Include="SensorCommunication\DataType.cs" />
+    <Compile Include="SensorCommunication\AddValues\Measurement.cs" />
+    <Compile Include="SensorCommunication\AddValues\MeasurementValue.cs" />
+    <Compile Include="SensorCommunication\UpdateSensor\Metadata.cs" />
+    <Compile Include="SensorCommunication\UpdateSensor\SensorDefinition.cs" />
     <Compile Include="SensorCommunication\IJsonDeserializer.cs" />
+    <Compile Include="SensorCommunication\IMessageHandler.cs" />
     <Compile Include="SensorCommunication\ISingleMessageTypeHandler.cs" />
     <Compile Include="SensorCommunication\JsonDeserializer.cs" />
-    <Compile Include="SensorCommunication\MetadataHandler.cs" />
-    <Compile Include="SensorCommunication\UdateSensorHandler.cs" />
-    <Compile Include="SensorCommunication\UpdateSensor.cs" />
+    <Compile Include="SensorCommunication\UpdateSensor\MetadataHandler.cs" />
+    <Compile Include="SensorCommunication\UpdateSensor\UdateSensorHandler.cs" />
+    <Compile Include="SensorCommunication\UpdateSensor\UpdateSensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -143,6 +145,7 @@
   <ItemGroup>
     <Analyzer Include="..\packages\AsyncUsageAnalyzers.1.0.0-alpha003\analyzers\dotnet\AsyncUsageAnalyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
