--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -80,12 +80,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutofacConfiguration\Bootstrapper.cs" />
-    <Compile Include="Configuration.cs" />
+    <Compile Include="Config\Configuration.cs" />
     <Compile Include="CommandBus\CommandHandlerAttribute.cs" />
     <Compile Include="CommandBus\ICommand.cs" />
     <Compile Include="CommandBus\ICommandBus.cs" />
     <Compile Include="CommandBus\IHandleCommand.cs" />
     <Compile Include="CommandBus\SimpleBus.cs" />
+    <Compile Include="Config\ConfigurationLoader.cs" />
+    <Compile Include="Config\IConfigurationLoader.cs" />
     <Compile Include="Mapping\AutomapperProvider.cs" />
     <Compile Include="Api\Index\IndexCommand.cs" />
     <Compile Include="Api\Index\IndexHandler.cs" />
@@ -140,6 +142,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Config\configuration.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
